--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    
     <title>Product</title>
   </head>
   <body>
